# FastImageRanking

./: CMakeLists.txt  common.h  fast_compare.h  image.cpp  image.h  location.h  patch.cpp  patch.h  paths.m  quickscore.cpp  quickscore.h  quickscore.mexa64  quickscore.mexw64  readme  rotate.cpp  rotate.h  score.cpp  score.h  structures.h
m/: ConvertToImStruct_example.m  compile_linux.m  compile_windows_debug.m  compile_windows_dumping.m  compile_windows_release.m  compile_windows_rotate_test.m  image_load_example.m  patch_find_sanity_test.m  quickscore_sanity_test.m  rotation_sanity_test.m  run_with_foreground_sample.m
testing/: performance_test.cpp  rotate_image.cpp  rotate_image.h
